@startuml ProcessoSelecao
' Classes principais (fiéis à implementação .NET)
class BaseEntity {
    # id: long
    # dataCriacao: DateTime
    # dataAtualizacao: DateTime?
}

class Candidato {
    - nome: string
    - cpf: string
    - rg: string?
    - telefone: string?
    - email: string
    - areaPesquisa: string?
    - statusValidacao: StatusValidacao
    - dataCadastro: DateTime
    - processoSelecaoId: long
    - numeroInscricao: string
    - dataNascimento: DateTime?
    - paisNatal: string?
    - estadoNatal: string?
    - naturalidade: string?
    - nomeSocial: string?
    - estadoCivil: string?
    - nacionalidade: string?
    - sexo: string?
    - telefone2: string?
    - corRaca: string?
    - dataVencimentoRG: DateTime?
    - tipoVisto: string?
    - formaInscricao: string?
    - localProva: string?
    - campusProva: string?
    - valorInscricao: decimal?
    - deficienciaFisica: bool
    - deficienciaAuditiva: bool
    - deficienciaFala: bool
    - deficienciaVisual: bool
    - deficienciaMental: bool
    - deficienciaIntelectual: bool
    - deficienciaReabilitado: bool
    - deficienciaMultipla: bool
    - motivoOutrasNecessidades: string?
    - tituloProjeto: string?
    - nota1: float
    - nota2: float

    + ValidarDocumentos(): bool
    + CalcularPontuacao(): float
}

class Documento {
    - tipo: TipoDocumento
    - nomeArquivo: string
    - caminhoLocal: string
    - linkUrl: string?
    - hashValidacao: string?
    - dataUpload: DateTime
    - validado: bool
    - motivoRejeicao: string?
    - candidatoId: long

    + VerificarIntegridade(): bool
    + ExtrairMetadados(): Dictionary<string, string>
}

class Avaliador {
    - nome: string
    - cpf: string
    - email: string
    - tipo: TipoAvaliador
    - areaEspecializacao: string?
    - instituicao: string?
    - ativo: bool
    - senhaHash: string?
    - processoSelecaoId: long?
    - linkLattes: string?
    - ultimaFormacao: string?
    - cargo: string?
    - nivelCnpq: NivelCnpq

    + ListarAvaliacoesPendentes(): List<Barema>
}

class Barema {
    - candidatoId: long
    - avaliadorId: long
    - criteriosJson: string?
    - notaFinal: float
    - observacoes: string?
    - dataPreenchimento: DateTime?
    - status: StatusBarema

    + CalcularNotaFinal(criterios: Dictionary<string, float>): float
    + ValidarCompletude(): bool
}

class ProcessoSelecao {
    - nome: string
    - descricao: string?
    - dataInicio: DateTime
    - dataFim: DateTime?
    - vagasDisponiveis: int
    - agenciaFomento: string?
    - nivelBolsa: string?
    - status: StatusProcesso

    + IniciarProcesso(): void
    + AbrirAutomaticamente(): bool
    + FinalizarProcesso(): void
    + VerificarPrazoExpirado(): bool
    + EstaDentroDoPrazo(): bool
    + ReverterSePrazoValido(): void
}

enum TipoDocumento {
    HistoricoEscolar
    ComprovanteMatricula
    CartaIntencao
    CurriculumLatte
    CartaRecomendacao
}

enum StatusValidacao {
    Pendente
    EmAnalise
    Validado
    Rejeitado
}

enum TipoAvaliador {
    Interno
    Externo
}

enum StatusBarema {
    Pendente
    EmPreenchimento
    Concluido
    Cancelado
}

enum StatusProcesso {
    Rascunho
    Aberto
    EmAndamento
    Finalizado
    Cancelado
}

enum NivelCnpq {
    NaoSeAplica
    Pq2
    Pq1D
    Pq1C
    Pq1B
    Pq1A
    Dt2
    Dt1
}

' Heranças
BaseEntity <|-- Candidato
BaseEntity <|-- Documento
BaseEntity <|-- Avaliador
BaseEntity <|-- Barema
BaseEntity <|-- ProcessoSelecao

' Relacionamentos
ProcessoSelecao "1" *-- "0..*" Candidato : inclui
ProcessoSelecao "1" *-- "0..*" Avaliador : designa
Candidato "1" *-- "0..*" Documento : possui
Candidato "1" -- "0..*" Barema : é avaliado por
Avaliador "1" -- "0..*" Barema : preenche

' Interfaces de serviço
interface EmailNotificationService {
    + SendAsync(to: string, subject: string, body: string): Task
}

@enduml
